// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing block smoke tests the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div
    style={
      Object {
        "backgroundColor": "testColor",
        "border": "1px solid black",
        "height": "calc(5% - 2px)",
        "width": "calc(10% - 2px)",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "testKey",
    "nodeType": "host",
    "props": Object {
      "style": Object {
        "backgroundColor": "testColor",
        "border": "1px solid black",
        "height": "calc(5% - 2px)",
        "width": "calc(10% - 2px)",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "testKey",
      "nodeType": "host",
      "props": Object {
        "style": Object {
          "backgroundColor": "testColor",
          "border": "1px solid black",
          "height": "calc(5% - 2px)",
          "width": "calc(10% - 2px)",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`testing nextBlock smoke tests the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div
    style={
      Object {
        "backgroundColor": "testColor",
        "border": "1px solid black",
        "height": "calc(25% - 2px)",
        "width": "calc(25% - 2px)",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "testkey",
    "nodeType": "host",
    "props": Object {
      "style": Object {
        "backgroundColor": "testColor",
        "border": "1px solid black",
        "height": "calc(25% - 2px)",
        "width": "calc(25% - 2px)",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "testkey",
      "nodeType": "host",
      "props": Object {
        "style": Object {
          "backgroundColor": "testColor",
          "border": "1px solid black",
          "height": "calc(25% - 2px)",
          "width": "calc(25% - 2px)",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
